feat: ES 동기화를 위한 UpdatedItem 엔티티 추가 및 수정